Updating documentation (correcting version numbers)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,7 +60,7 @@ RUN pip install \
 # Perl packags
 RUN cpanm XML::XPath
 
-# Strelka v 2.7.1
+# Strelka v 2.7.1 is latest,
 #  -> incorporate the newest Strelka at some point 
 #RUN cd /usr/local \
 #    && wget https://github.com/Illumina/strelka/releases/download/v2.7.1/strelka-2.7.1.centos5_x86_64.tar.bz2 \
@@ -68,7 +68,7 @@ RUN cpanm XML::XPath
 #    && tar -xf strelka-2.7.1.centos5_x86_64.tar \
 #    && rm strelka-2.7.1.centos5_x86_64.tar
 
-# Note that SomaticWrapper v1.1 uses strelka 1.0.14.  We download that too
+# Note that SomaticWrapper v1.1 uses strelka 1.0.15.  We download that too
 RUN cd /usr/local \
     && wget https://sites.google.com/site/strelkasomaticvariantcaller/home/download/strelka_workflow-1.0.15.tar.gz \
     && tar -zxf strelka_workflow-1.0.15.tar.gz \
