--- a/params/pindel.WGS.ini
+++ b/params/pindel.WGS.ini
@@ -7,3 +7,4 @@ pindel.filter.somatic.min_var_allele_freq = 0.05
 pindel.filter.somatic.require_balanced_reads = true
 pindel.filter.somatic.remove_complex_indels = true
 pindel.filter.somatic.max_num_homopolymer_repeat_units = 6
+pindel.filter.somatic.zero_variant_support = 0.01
