--- a/testing/StrelkaDemo.dat/pindel.WES.ini
+++ b/testing/StrelkaDemo.dat/pindel.WES.ini
@@ -3,7 +3,8 @@ pindel.filter.homozyg_min_var_allele_freq = 0.8
 pindel.filter.mode = somatic
 pindel.filter.apply_filter = true
 pindel.filter.somatic.min_coverages = 10
-pindel.filter.somatic.min_var_allele_freq = 0.05  # Change as implemented by Hua
+# Change below as implemented by Hua
+pindel.filter.somatic.min_var_allele_freq = 0.05  
 # pindel.filter.somatic.min_var_allele_freq = 0.10
 pindel.filter.somatic.require_balanced_reads = true
 pindel.filter.somatic.remove_complex_indels = true
