--- a/vcf_filters/vcf_filter_config.ini
+++ b/vcf_filters/vcf_filter_config.ini
@@ -1,8 +1,12 @@
 # test configuration file for vaf_filter.py
 
 [vaf]
-
 min_vaf_somatic = 0.05
 max_vaf_germline = 0.02
 tumor_name = TUMOR
 normal_name = NORMAL
+
+[indel_length]
+max_length = 100
+min_length = 0 
+
