Finalizing filter deployment
* combined af + classification filter
* separating out ini files and test scripts

--- a/params/classification_filter_config.ini
+++ b/params/classification_filter_config.ini
@@ -1,5 +1,5 @@
 [classification]
-exclude = NMD_transcript_variant,
+include = NMD_transcript_variant,
     coding_sequence_variant,
     conservative_missense_variant,
     disruptive_inframe_deletion,
