--- a/params/pindel-vcf_filter_config.ini
+++ b/params/pindel-vcf_filter_config.ini
@@ -3,10 +3,6 @@
 # these will be renamed TUMOR, NORMAL prior to merge
 # min_vaf_somatic changed to 0.1
 
-# Note that by default pindel VCF columns are,
-# tumor_name = pindel.T
-# normal_name = pindel.N
-# for the purposes of merging these are renamed prior to this analysis to be consistent with strelka and varscan versions
 
 [vaf]
 min_vaf_somatic = 0.10
@@ -14,7 +10,7 @@ max_vaf_germline = 0.02
 tumor_name = TUMOR
 normal_name = NORMAL
 
-[indel_length]
+[length]
 max_length = 100
 min_length = 0 
 
