Testing caller definition in config file

--- a/params/vcf_filter_config-pindel.ini
+++ b/params/vcf_filter_config-pindel.ini
@@ -1,10 +1,16 @@
 # test configuration file for vaf_filter.py
+# specific to pindel: 
+#  * min_vaf_somatic changed to 0.1
+#
+# Indicating pindel variant caller in configuration file
+
 
 [vaf]
-min_vaf_somatic = 0.05
+min_vaf_somatic = 0.10
 max_vaf_germline = 0.02
 tumor_name = TUMOR
 normal_name = NORMAL
+caller = pindel
 
 [length]
 max_length = 100
@@ -14,3 +20,4 @@ min_length = 0
 min_depth = 20
 tumor_name = TUMOR
 normal_name = NORMAL
+caller = pindel
